syntax = "proto3";

package alb;

option go_package = "waypoint/builtin/aws/alb";

message TargetGroup {
  string arn = 1;
  string region = 2;
}

message Release {
  string url = 1;
  string load_balancer_arn = 2;
  string targetGroupArn = 4;
  string region = 3;
}
